--- a/src/components/Login/loginform.scss
+++ b/src/components/Login/loginform.scss
@@ -5,10 +5,15 @@
     margin-left: 0;
     max-width: 400px;
 
+    @media (max-width:500px) {
+        margin: 0;
+        width: 80vw;
+    }
+
     &__entry {
         margin: 2rem 0;
 
-        >input {
+        input {
             padding: 1rem;
             width: 100%;
             border-color: rgba($text-color,
@@ -26,34 +31,16 @@
         .password-input {
             display: flex;
             align-items: center;
-            width: 100%;
-            border: 2px solid;
-            border-color: rgba($text-color,
-                    0.15);
-            border-width: 2px;
-            border-radius: 5px;
+            position: relative;
 
-            input {
-                flex: 1;
-                font-size: 14px;
-                padding: 1rem;
-                border: none;
-
-                &:focus {
-                    outline: none;
-                }
-            }
-
-            &:focus {
-                border: $sec-color 2px solid;
-            }
 
             span {
+                position: absolute;
+                right: 1rem;
                 text-transform: uppercase;
                 color: $sec-color;
                 font-weight: 600;
                 font-size: 12px;
-                margin-right: 1rem;
                 cursor: pointer;
             }
         }
