--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -10,6 +10,10 @@
         .logo {
             position: absolute;
             margin: 10vh;
+
+            @media (max-width:500px) {
+                margin: 10vw;
+            }
         }
     }
 
@@ -19,6 +23,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        @media (max-width:500px) {
+            display: none;
+        }
     }
 
 
@@ -28,6 +36,10 @@
         flex-direction: column;
         flex: 3;
         width: max-content;
+
+        @media (max-width:500px) {
+            align-items: center;
+        }
 
         h1 {
             color: $pry-color;
