--- a/src/components/Dashboard/Layout/Navbar/navbar.scss
+++ b/src/components/Dashboard/Layout/Navbar/navbar.scss
@@ -1,9 +1,13 @@
 @import "/src/variables.scss";
 
 .navbar {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 10;
     display: flex;
     align-items: center;
-    padding: 1rem 1.2rem;
+    padding: 0.8rem 1.2rem;
     width: 100vw;
     box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
 
@@ -62,7 +66,7 @@
 
             input {
                 border: none;
-                height: 2.8rem;
+                height: 2.6rem;
                 width: 25rem;
                 border-radius: 8px;
                 font-size: 14px;
@@ -78,7 +82,7 @@
                 height: 100%;
                 padding: 0 1.5rem;
                 border: none;
-                height: 2.8rem;
+                height: 2.6rem;
                 border-radius: 0 6px 6px 0;
             }
         }
@@ -114,7 +118,7 @@
 
             img {
                 border-radius: 3rem;
-                width: 3rem;
+                width: 2.8rem;
                 border: 2px solid white;
 
                 &:hover {
