Adjustments for mobile view

--- a/src/components/Dashboard/Layout/Navbar/navbar.scss
+++ b/src/components/Dashboard/Layout/Navbar/navbar.scss
@@ -12,7 +12,7 @@
     box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
 
     @media (max-width: 500px) {
-        padding: 0.5rem;
+        padding: 0.3rem 0.5rem;
 
     }
 
@@ -23,11 +23,11 @@
             display: flex;
             flex-direction: column;
             gap: 4px;
-            padding: 0 1rem;
+            padding: 0 0.6rem;
 
             div {
-                width: 1.8rem;
-                height: 3px;
+                width: 1.2rem;
+                height: 2px;
                 background-color: $pry-color;
             }
 
@@ -43,10 +43,9 @@
 
         @media (max-width: 500px) {
             flex: 5;
-            margin-left: 1rem;
+            margin-left: 0.6rem;
 
         }
-
     }
 
     .search {
@@ -104,10 +103,22 @@
         a {
             text-transform: capitalize;
             color: $pry-color;
+
+            @media (max-width: 500px) {
+                font-size: 0.8rem;
+            }
         }
 
         .notification {
             cursor: pointer;
+
+            @media (max-width: 500px) {
+                img {
+                    width: 1.3rem;
+                }
+            }
+
+
         }
 
         .user-profile {
@@ -131,6 +142,10 @@
 
                 p {
                     display: none;
+                }
+
+                img {
+                    width: 2.3rem;
                 }
 
             }
