--- a/src/components/Dashboard/Layout/Sidebar/sidebar.scss
+++ b/src/components/Dashboard/Layout/Sidebar/sidebar.scss
@@ -8,8 +8,18 @@
     max-width: 300px;
     min-width: 230px;
 
+    @media (max-width: 500px) {
+        font-size: 0.8rem;
+
+    }
+
     .nav_org {
         padding: 2rem 0;
+
+        @media (max-width: 500px) {
+            padding: 1rem 0;
+
+        }
     }
 
     h3 {
@@ -28,6 +38,11 @@
         cursor: pointer;
         text-transform: capitalize;
         opacity: 0.6;
+
+        @media (max-width: 500px) {
+            padding: 0.7rem 1.5rem;
+
+        }
 
         &:hover {
             background-color: rgba($sec-color, 0.1);
