--- a/src/components/Dashboard/Layout/Sidebar/sidebar.scss
+++ b/src/components/Dashboard/Layout/Sidebar/sidebar.scss
@@ -7,9 +7,12 @@
     width: 20vw;
     max-width: 300px;
     min-width: 230px;
+    height: calc(100vh - 61px);
+    overflow-y: scroll;
 
     @media (max-width: 500px) {
         font-size: 0.8rem;
+        height: calc(100vh - 64px);
 
     }
 
