--- a/src/components/Dashboard/Layout/DashboardLayout/dashboardLayout.scss
+++ b/src/components/Dashboard/Layout/DashboardLayout/dashboardLayout.scss
@@ -1,34 +1,42 @@
-.body {
-    @media (max-width:500px) {
-        position: relative;
-        left: -230px;
+.dashboard-layout {
+    height: 100vh;
+    overflow: hidden;
 
-        @keyframes slideout {
-            0% {
-                left: -230px;
+    .body {
+        display: flex;
+
+        @media (max-width:500px) {
+            position: relative;
+            left: -230px;
+            width: calc(100vw + 230px);
+
+            @keyframes slideout {
+                0% {
+                    left: -230px;
+                }
+
+                100% {
+                    left: 0;
+                }
             }
 
-            100% {
-                left: 0;
+            @keyframes slidein {
+                0% {
+                    left: 0;
+                }
+
+                100% {
+                    left: -230px;
+                }
             }
-        }
 
-        @keyframes slidein {
-            0% {
-                left: 0;
+            &.open {
+                animation: slideout 0.4s ease-out both;
             }
 
-            100% {
-                left: -230px;
+            &.close {
+                animation: slidein 0.4s ease-in both;
             }
-        }
-
-        &.open {
-            animation: slideout 0.4s ease-out both;
-        }
-
-        &.close {
-            animation: slidein 0.4s ease-in both;
         }
     }
 }
