Implement design for users infocards

--- a/src/components/Dashboard/Layout/DashboardLayout/dashboardLayout.scss
+++ b/src/components/Dashboard/Layout/DashboardLayout/dashboardLayout.scss
@@ -1,6 +1,9 @@
+@import "/src/variables.scss";
+
 .dashboard-layout {
     height: 100vh;
     overflow: hidden;
+    color: $pry-color;
 
     .body {
         display: flex;
