--- a/src/components/Dashboard/Users/users.scss
+++ b/src/components/Dashboard/Users/users.scss
@@ -1,13 +1,44 @@
 .users {
     width: 100vw;
-    background-color: red;
-    color: white;
     height: calc(100vh - 61px);
     overflow-y: scroll;
+    padding: 2rem;
 
     @media (max-width: 500px) {
         font-size: 0.8rem;
         height: calc(100vh - 64px);
+        padding: 1rem;
 
     }
+
+    h2 {
+        font-weight: 500;
+        font-size: 24px;
+    }
+
+    &__infocards {
+        display: flex;
+        justify-content: space-between;
+        gap: 0.8rem;
+        max-width: 1200px;
+        margin: 1rem 0;
+        padding-bottom: 1rem;
+        overflow-x: scroll;
+
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        @media (max-width:620px) {
+
+            width: calc(100vw)
+        }
+
+
+
+    }
+
 }
