--- a/src/components/Dashboard/Layout/Sidebar/sidebar.scss
+++ b/src/components/Dashboard/Layout/Sidebar/sidebar.scss
@@ -9,6 +9,12 @@
     min-width: 230px;
     height: calc(100vh - 61px);
     overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     @media (max-width: 500px) {
         font-size: 0.8rem;
