--- a/src/components/Dashboard/Users/UsersInfoCard/usersinfocard.scss
+++ b/src/components/Dashboard/Users/UsersInfoCard/usersinfocard.scss
@@ -2,22 +2,23 @@
     background: #FFFFFF;
     border: 1px solid rgba(33, 63, 125, 0.06);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
-    border-radius: 4px;
+    border-radius: 10px;
     width: 22%;
     min-width: 230px;
     padding: 1rem 1.5rem;
 
     &__title {
         font-weight: 500;
-        font-size: 14px;
+        font-size: 13px;
         line-height: 16px;
         text-transform: uppercase;
         margin: 0.6rem 0;
     }
 
     &__stat {
+        font-family: "Work Sans";
         font-weight: 600;
-        font-size: 24px;
+        font-size: 20px;
         line-height: 28px;
         margin: 0.8rem 0;
     }
