--- a/src/components/Dashboard/Users/users.scss
+++ b/src/components/Dashboard/Users/users.scss
@@ -1,8 +1,9 @@
 .users {
-    width: 100vw;
+    width: calc(100vw - 230px);
+    overflow-x: hidden;
     height: calc(100vh - 61px);
     overflow-y: scroll;
-    padding: 2rem;
+    padding-right: 0;
 
     @media (max-width: 500px) {
         font-size: 0.8rem;
@@ -14,6 +15,8 @@
     h2 {
         font-weight: 500;
         font-size: 24px;
+        padding: 1rem;
+        margin: 2rem;
     }
 
     &__infocards {
@@ -21,8 +24,7 @@
         justify-content: space-between;
         gap: 0.8rem;
         max-width: 1200px;
-        margin: 1rem 0;
-        padding-bottom: 1rem;
+        margin: 2rem;
         overflow-x: scroll;
 
         scrollbar-width: none;
