--- a/src/components/Dashboard/Layout/Sidebar/sidebar.scss
+++ b/src/components/Dashboard/Layout/Sidebar/sidebar.scss
@@ -7,6 +7,7 @@
     width: 20vw;
     max-width: 300px;
     min-width: 230px;
+    border-right: 1px solid rgba(33, 63, 125, 0.06);
     height: calc(100vh - 61px);
     overflow-y: scroll;
     scrollbar-width: none;
