--- a/src/components/Dashboard/Users/UsersData/usersdata.scss
+++ b/src/components/Dashboard/Users/UsersData/usersdata.scss
@@ -1,16 +1,25 @@
 .users-data {
     width: 100%;
     padding: 0 2rem;
+    max-width: 1200px;
     overflow-x: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+
 
     &__container {
-        min-width: 1100px;
+        min-width: 1000px;
         background: #FFFFFF;
         border: 1px solid rgba(33, 63, 125, 0.06);
         box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
         border-radius: 10px;
         padding: 1.4rem;
-        max-width: 1200px;
+
     }
 
     header {
@@ -37,7 +46,7 @@
         padding: 0.7rem 0;
         border-bottom: 1px solid rgba(33, 63, 125, 0.1);
         ;
-        font-size: 12px;
+        font-size: 11px;
 
         .status {
             display: flex;
@@ -52,4 +61,32 @@
             }
         }
     }
+}
+
+.open {
+    @keyframes open_menu {
+        0% {
+            height: 0;
+        }
+
+        100% {
+            height: 100%;
+        }
+    }
+
+    animation: open_menu 0.8s both;
+}
+
+.close {
+    @keyframes close_menu {
+        0% {
+            height: 100%;
+        }
+
+        100% {
+            height: 0;
+        }
+    }
+
+    animation: close_menu 0.8s both;
 }
